load("@neutron//neutron:neutron_library.bzl", "neutron_zeros_library")

package(default_visibility = ["//visibility:public"])

neutron_zeros_library(
    name = "robot_msgs",
    srcs = [
        "robot_msgs/msg/GpsLocation.msg",
    ],
    add_namespace = "zeros",
    deps = [
        ":std_msgs",
    ],
)

neutron_zeros_library(
    name = "std_msgs",
    srcs = [
        "std_msgs/msg/Header.msg",
    ],
    add_namespace = "zeros",
)
