package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "camera.so",
    srcs = [
        "camera.cc",
    ],
    linkshared = 1,
    linkstatic = 0,
    deps = [
        "//module:protobuf_module",
        "//robot/proto:vision_cc_proto",
        "@com_google_absl//absl/strings:str_format",
    ],
)
