package(default_visibility = ["//visibility:public"])

cc_library(
    name = "client",
    srcs = [
        "client.cc",
    ],
    hdrs = [
        "client.h",
    ],
    deps = [
        "//proto:config_cc_proto",
        "//proto:control_cc_proto",
        "//stagezero/telemetry",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@coroutines//:co",
        "@toolbelt//toolbelt",
        "//common",
    ],
)

cc_test(
    name = "client_test",
    size = "small",
    srcs = ["client_test.cc"],
    data = [
        "//testdata:loop",
        "//testdata:telemetry",
        "//testdata:echo",
        "//testdata:files",
        "//testdata:vars",
        "//testdata:module.so",
        "//stagezero/zygote:standard_zygote",
    ],
    deps = [
        ":client",
        "//stagezero:stagezero_lib",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest",
        "@coroutines//:co",
    ],
)
