package(default_visibility = ["//visibility:public"])

cc_library(
    name = "telemetry",
    srcs = [
        "telemetry.cc",
    ],
    hdrs = [
        "telemetry.h",
    ],
    deps = [
        "//proto:telemetry_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@coroutines//:co",
        "@toolbelt//toolbelt",
    ],
)
