package(default_visibility = ["//visibility:public"])

cc_library(
    name = "zygote_core",
    srcs = [
        "zygote_core.cc",
    ],
    hdrs = [
        "zygote_core.h",
    ],
    deps = [
        "//proto:config_cc_proto",
        "//proto:control_cc_proto",
        "//stagezero:symbols_lib",
        "//stagezero:cgroup_lib",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@coroutines//:co",
        "@toolbelt//toolbelt",
    ],
)

cc_binary(
    name = "standard_zygote",
    srcs = [
        "standard_zygote.cc",
    ],
    deps = [
        ":zygote_core",
    ],
)
